<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_player"
        android:icon="@drawable/ic_face_white_24dp"
        android:title="@string/player" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_bank"
        android:icon="@drawable/ic_account_balance_white_24dp"
        android:title="@string/bank" />

</menu>
